# legato-WiFi

./: .gitignore  CMakeLists.txt  KConfig  Makefile  le_wifiAp.api  le_wifiClient.api  le_wifiDefs.api  moduleDefs  targetDefs.wifi  wifi.sdef  wifi.sinc  wifi_samples.sinc
apps/sample/wifiApTest/: Makefile  wifiApTest.adef
apps/sample/wifiClientTest/: Makefile  wifiClientTest.adef
apps/sample/wifiWebAp/: Makefile  wifiWebAp.adef
apps/test/: CMakeLists.txt
apps/test/wifiClientUnitTest/: CMakeLists.txt  Component.cdef  interfaces.h  main.c  stubs.c
apps/tools/wifi/: Makefile  wifi.adef
doc/:  mangoh_toolsTarget_wifiApTest.dox   mangoh_toolsTarget_wifiClientTest.dox  external_mainpage.dox  mangoh_mainpage.dox  mangoh_toolsTarget_wifi.dox  wifi_toolsTarget_wifi.dox  wifi_toolsTarget_wifiApTest.dox  wifi_toolsTarget_wifiClientTest.dox  wifi_toolsTarget_wifiWebAp.dox
service/: Makefile  wifiService.adef
service/daemon/: Component.cdef  le_wifiAp.c  le_wifiClient.c  wifiService.c  wifiService.h
service/platformAdaptor/common/: pa_wifi_ap.c  pa_wifi_client.c
service/platformAdaptor/inc/: pa_wifi.h  pa_wifi_ap.h
wifiApTest/: Makefile
wifiApTest/wifiApTestComponent/: Component.cdef  wifiApTest.c
wifiClientTest/: Makefile
wifiClientTest/wifiClientTestComponent/: wifiClientTest.c
wifiService/: Makefile  wifiService.adef
wifiService/wifiClient/: Component.cdef  le_wifiClient.c  pa_wifi.c  pa_wifi.h
wifiService/wifiService/: Component.cdef  le_wifiAp.c  le_wifiClient.c  pa_wifi.sh  pa_wifi_ap.c  pa_wifi_ap.h  wifiService.c  wifiService.h
(+28 files in other folders)
